# chatgpt_to_wordpress

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 1d308b125592_added_article_article_excerpt.py  1eae20bc103d_added_article_article_excerpt_added.py  238ef5d3a581_added_article_status.py  357f31b330da_added_article_updated.py  3eb9eb436ee6_initial_migration.py  54b03f5a4808_added_article_status.py  777bf04ac3ba_added_article_article_tags.py  82e5379fb84f_added_article_id.py  8795ae4585d3_added_article_article_status.py  9e1662f523f7_added_removed_unnecessary_fileds.py  a71d1249b021_added_article_tags_added.py  b2b02aeb22ac_added_article_article_tags.py  bac3b1835849_added_article_tags_added.py  d44e4dab4425_added_article.py  d9d24a5a012c_added_article_article_image_location.py  ea1f64c99629_added_removed_unnecessary_fileds.py  f7e8ae27bbaf_added_article_timestamp.py
chatgpt_to_wordpress/: config.py  main.py  models.py
data/: trends.db
